# franka-slm

./: .gitignore  LICENSE  README.md  THIRD_PARTY.md  iniciar_tfg.sh
src/panda_ws/panda_controller/: CMakeLists.txt  README.md  package.xml
src/panda_ws/panda_controller/config/: panda_controllers.yaml  tfg_motion_waypoints.yaml
src/panda_ws/panda_controller/config/candidate_benchmarking/: chips_mustard_02.yaml  demo_scene_02.yaml
src/panda_ws/panda_controller/config/demo_candidate_cache/: demo_scene_02_chips_can_golden.yaml  demo_scene_02_cracker_box_golden.yaml  demo_scene_02_cracker_box_slot_0_full_execution_golden.yaml.bad_zero_descend_20260608_210341.yaml  demo_scene_02_cracker_box_slot_0_full_execution_golden.yaml.before_mark_not_validated_20260608_181618  demo_scene_02_mustard_bottle_golden.yaml  demo_scene_02_sugar_box_golden.yaml
src/panda_ws/panda_controller/config/demo_profiles/: demo_scene_02_chips_can.yaml  demo_scene_02_clear_table.yaml  (+3 more)
src/panda_ws/panda_controller/launch/: panda_controller.launch.py  slider_controller.launch.py
src/panda_ws/panda_controller/panda_controller/: __init__.py  attached_transport_entry_validate.py  attached_transport_phases.py  authoritative_scene_obstacle_resolve.py  authoritative_scene_obstacles.py  candidate_benchmarking.py  candidate_metrics.py  chips_can_descend_cartesian.py  chips_can_descend_depth.py  chips_can_final_descend_depth.py  chips_can_final_descend_posture.py  chips_can_high_route_prevalidate.py  chips_can_legacy_success_policy.py  chips_can_lift_cartesian.py  demo_cached_pick_candidates.py  demo_clear_table_policy.py  demo_cracker_box_cartesian_prevalidate.py  demo_cracker_box_execution_policy.py  demo_cracker_candidate_scoring.py  demo_cracker_collision_off_final_descend.py  demo_golden_execution_candidate.py  demo_golden_execution_replay.py  demo_golden_fast_transport.py  demo_golden_pick_candidate.py  demo_multiobject_target.py  demo_object_order_policy.py  demo_pick_bookkeeping.py  demo_pick_route_preflight.py  demo_profile_loader.py  demo_scene_global_sequence_validate.py  demo_scene_layout_validator.py  demo_scene_plan_preflight_certifier.py  demo_scene_policy.py  demo_scene_reachability_scan.py  deposit_layout_policy.py  descend_motion_policy.py  descend_tcp_hand_goal.py  execution_profile.py  generic_known_scene_carry_planner.py  get_cartesian_path_audit.py  (+42 more)
src/panda_ws/panda_controller/scripts/: run_perception_to_pregrasp_test.py
src/panda_ws/panda_controller/test/: test_attached_transport_entry_validate.py  test_attached_transport_phases.py  test_authoritative_scene_obstacle_resolve.py  test_authoritative_scene_obstacles.py  test_candidate_benchmarking.py  test_chips_can_adaptive_entry_z.py  test_chips_can_descend_cartesian_policy.py  test_chips_can_descend_collision_cleanup.py  test_chips_can_descend_depth.py  test_chips_can_disturbance_entity.py  test_chips_can_execution_preflight_high_route.py  test_chips_can_fast_joint7_correction.py  test_chips_can_final_descend_depth.py  test_chips_can_final_descend_posture.py  test_chips_can_gazebo_runtime_pose.py  test_chips_can_geometry_width_gate.py  test_chips_can_gt_cylinder_and_reachability.py  test_chips_can_gt_cylinder_centering_metrics.py  test_chips_can_high_pregrasp_policy.py  test_chips_can_high_route_prevalidate.py  test_chips_can_legacy_success_policy.py  test_chips_can_lift_cartesian_policy.py  test_chips_can_micro_descend_depth.py  test_chips_can_pregrasp_clearance.py  test_chips_can_pregrasp_open_and_descend_policy.py  test_chips_can_safe_pregrasp_policy.py  test_chips_can_top_z_resolve.py  test_chips_can_yaw_free_ik_variant_search.py  test_clear_table_manual_step_target.py  test_demo_cached_pick_candidates.py  test_demo_clear_table_policy.py  test_demo_completed_state_persistence.py  test_demo_cracker_box_cartesian_prevalidate.py  test_demo_cracker_box_execution_policy.py  test_demo_cracker_collision_off_final_descend.py  test_demo_cracker_final_descend_target_remove.py  test_demo_golden_execution_candidate.py  test_demo_golden_execution_replay.py  test_demo_golden_fast_transport.py  test_demo_golden_pick_candidate.py  (+66 more)
src/panda_ws/panda_vision_interfaces/: CMakeLists.txt  package.xml
src/panda_ws/panda_vision_interfaces/srv/: GetGraspCandidates.srv  GetObjectPose.srv  SetRuntimeSceneGt.srv
src/tfg_planner_slm/: README.md  package.xml  setup.cfg  setup.py
src/tfg_planner_slm/config/: pick_place_params.yaml
src/tfg_planner_slm/launch/: tfg_demo.launch.py  tfg_web_api.launch.py
src/tfg_planner_slm/test/: test_clear_table_authoritative_scene.py  test_clear_table_integration.py  test_deposit_02_cracker_chips.py  test_deposit_03_mustard_only.py  test_deposit_progress_counter.py  test_execution_progress.py  test_execution_progress_scene_total.py  test_explicit_slot_priority.py  test_intent_parser_deterministic.py  test_resolve_slot_from_text.py  test_ros_command_executor.py  test_ros_pick_place_cmd.py  test_ros_preflight.py  test_slm_backend_warmup.py
src/tfg_planner_slm/tfg_planner_slm/: __init__.py  cli_chat.py  command_dispatcher.py  deposit_scene_loader.py  execution_jobs.py  execution_progress.py  executor_node.py  guardrails_self_check.py  intent_parser.py  intent_schema.py  json_extract.py  llm_node.py  ollama_client.py  prompts.py  ros_command_executor.py  ros_pick_place_cmd.py  ros_preflight.py  semantic_guardrails.py  session_casuistics_check.py  slm_backend_session.py  slot_state.py  vision_bridge_node.py  vision_simulator.py  web_api.py  web_bridge_node.py  web_public_view.py  web_robot_bridge.py
src/tfg_planner_slm/tfg_planner_slm/benchmarks/: benchmarks_slm.py  slm_benchmark_results.csv
src/tfg_planner_slm/tfg_planner_slm/web/: app.js  index.html  styles.css
src/tfg_planner_slm/web_ui/: README.md  index.html  styles.css
src/tfg_planner_slm/web_ui/src/: app.js
(+168 files in other folders)
